added new routes and controllers
