# routes/index.js
@@ -6,4 +6,10 @@ router.use('/', require('./swagger'));
 // Use Trips
 router.use('/trips', require('./trips'));
 
+// Use wishlists
+router.use('/wishlists', require('./wishlists'));
+
+// Use accounts
+router.use('/accounts', require('./accounts'));
+
 module.exports = router;
